# board-recognition

./: .gitignore  README.md  flake.nix  justfile  pyproject.toml  tox.ini
board_recognition/: __init__.py  __main__.py  board.py  text.py  util.py
board_recognition_measure/: __init__.py  __main__.py
ground-truth/board/: 1.json  19.json  21.json  29.json  37.json  38.json  39.json  41.json  42.json  46.json  48.json  53.json  64.json  70.json  80.json  9.json
ground-truth/board/test/: 12.json  18.json  2.json  4.json  51.json  55.json  6.json  60.json  63.json  66.json  81.json
ground-truth/board/training/: 0.json  10.json  11.json  13.json  14.json  15.json  16.json  17.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  3.json  30.json  31.json  32.json  33.json  34.json  35.json  36.json  40.json  43.json  44.json  45.json  47.json  49.json  5.json  50.json  52.json  54.json  61.json  62.json  65.json  67.json  68.json  69.json  7.json  (+6 more)
ground-truth/text/: 0.json  11.json  14.json  21.json  3.json  30.json  31.json  32.json  39.json  4.json  41.json  50.json  51.json  63.json  64.json  65.json  66.json  67.json  7.json  76.json  78.json  9.json
ground-truth/text/test/: 12.json  18.json  38.json  42.json  48.json  55.json  6.json  60.json  81.json
ground-truth/text/training/: 1.json  10.json  13.json  15.json  16.json  17.json  19.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  33.json  34.json  35.json  36.json  37.json  40.json  43.json  44.json  45.json  46.json  47.json  49.json  5.json  52.json  53.json  54.json  61.json  62.json  68.json  69.json  70.json  72.json  77.json  79.json  8.json  (+1 more)
report/: report-2023-02-27-17-04-06.txt  report-2023-03-10-18-32-15.txt  report-2023-03-10-18-32-55.txt  report-2023-03-10-18-34-03.txt  report-2023-03-10-18-34-55.txt  report-2023-03-10-18-35-42.txt  report-2023-03-10-20-45-35.txt  report-2023-05-22-16-47-13.txt
report/test/: report-2023-05-23-01-33-31.txt
report/training/: report-2023-05-23-01-26-18.txt
results/: 10.json  12.json  13.json  15.json  16.json  18.json  19.json  20.json  22.json  24.json  25.json  26.json  34.json  35.json  36.json  39.json  40.json  42.json  43.json  44.json  46.json  50.json  51.json  52.json  53.json  55.json  56.json  58.json  60.json  65.json  66.json  9.json
tests/: image_test.py  test_board_recognition.py
