[tool.poetry]
name = "board-recognition"
version = "0.1.0"
description = "board-recognition detects information from boards"
authors = [ "David Bret", "Paul Chambaz", "Frederic Ye" ]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
#attrdict3 = "^2.0.2"
#wheel = "^0.40.0"
#requests = "^2.30.0"
#wxpython = "4.1"
#gooey = "^1.0.8.1"
pillow = "^9.5.0"
matplotlib = "^3.7.1"
numpy = "^1.24.3"
argparse = "^1.4.0"
pathlib = "^1.0.1"
tqdm = "^4.65.0"
shapely = "^2.0.1"
alphashape = "^1.3.1"
opencv-python = "^4.7.0.72"
scikit-image = "^0.20.0"

[tool.poetry.group.dev.dependencies]
labelme = "^5.1.1"
tox = "^4.4.6"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
board-recognition = "board_recognition:main"
board-recognition-measure = "board_recognition_measure:main"
